spacing and sizing fix

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -40,6 +40,10 @@ div.user-bio {
   box-shadow: 5px 5px 5px 5px black;
 }
 
+div.totals {
+  padding: 25px;
+}
+
 div.user-reviews {
   font-size: 18px;
   height: 100%;
